# AutoTestDesign

./: .gitignore  README.md
AutoTestDesign/: .gitignore  .pre-commit-config.yaml
AutoTestDesign/backend/: pyproject.toml
AutoTestDesign/backend/app/api/: __init__.py  coverage.py  optimize.py  requirements.py  testcases.py
AutoTestDesign/backend/app/core/: config.py
AutoTestDesign/backend/app/models/: __init__.py  models.py
AutoTestDesign/backend/app/services/: optimize_service.py  testcase_service.py
AutoTestDesign/backend/tests/: test_smoke.py  test_sprint4.py
AutoTestDesign/frontend/: index.html
AutoTestDesign/frontend/src/api/: index.js
backend/: .env.example  autotestdesign.db  check_db.py  migrate_sprint4.py
backend/app/: main.py
backend/app/api/: export.py  risk.py  testcases.py  whitebox.py
backend/app/core/: database.py  llm.py
backend/app/schemas/: schemas.py
backend/app/services/: optimize_service.py  oracle_service.py  parse_service.py  risk_service.py  testcase_service.py  whitebox_service.py
backend/tests/: conftest.py  test_requirements.py  test_sprint1.py  test_sprint2.py  test_sprint3.py
docs/: detailed-test-design-and-execution.md  risk-analysis-report.md  test-plan.md
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.js  router.js
frontend/src/api/: index.js
frontend/src/views/: ExportView.vue  ImportView.vue  RequirementsView.vue  TestCasesView.vue
target-app/: .gitignore  README.md  app.py  config.py  models.py  requirements.txt
target-app/tests/: test_detailed_design_execution.py
(+3 files in other folders)
